--- a/style.css
+++ b/style.css
@@ -7,8 +7,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
+.logo{
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    cursor: pointer;
+}
+.logo img{
+    height: 25px;
+}
 .card {
     width: 50%;
     min-width: 280px;
@@ -18,6 +28,12 @@ body {
     flex-direction: column;
     justify-content: center;
     border-radius: 10px;
+    
+    
+}
+.glow{
+    border: 2px solid white;
+    box-shadow: 2px 2px 17px 5px;
 }
 
 .card h1 {
@@ -71,4 +87,7 @@ body {
     height: 20px;
     position: absolute;
     left: clamp(2px,10%,10px);  
+}
+.hide{
+    display: none;
 }
